--- a/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/static/css/style.css
+++ b/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/static/css/style.css
@@ -179,19 +179,28 @@ main {
   transform: translatey(-50%);
   left: 50%;
   transform: translatex(-20%);
+  text-align: justify;
 }
 
 #firtpage{
+  width: 70%;
+  display: flex;
   background-color: #4f46e5;
+  justify-content: center;
+  align-items: center;
+
 }
 .container {
-    
+  justify-content: center; /* centraliza horizontal */
+  align-items: center;     /* centraliza vertical */
+  display: flex;
   background-color: rgb(255, 255, 255);
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  width: 300px;
+  width: 200px;
   text-align: center;
+  position: absolute;
 }
 
 .container, .calendar {
