--- a/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/inicio.html
+++ b/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/inicio.html
@@ -34,7 +34,7 @@
 
         <!--botao para redirecionar para aba de usuarios-->
         <li class="side-item">
-          <a href="{{ url_for('user_view') }}">
+          <a href="{{ url_for('usuario') }}">
             <i class="fa-solid fa-user"></i>
             <span class="item-description">
               Usuários
