--- a/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/inicio.html
+++ b/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/inicio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Calendário - To-Do</title>
+  <title>inicio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
@@ -42,6 +42,8 @@
           </a>
         </li>
 
+   
+
         <!--botao de logout-->
         <form action="logout" method="post">
           <button id="logout_btn" type="submit">
@@ -60,7 +62,7 @@
   </nav>
 
   <main>
-    <h1>Título</h1>
+    <h1>Bem vindo ao Organiza+</h1>
   </main>
 
 
