--- a/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/calendario.html
+++ b/projeto-FS-main/projeto-FS-main/projeto_flask_postgres_atualizado/templates/calendario.html
@@ -44,5 +44,7 @@
       <button onclick="closeModal()" style="margin-top: 15px; background: #5ce1e6; border: none; padding: 8px 16px; border-radius: 8px; cursor: pointer;">Fechar</button>
     </div>
   </div>
+
+   <script src="/static/javascript/script.js"></script>
   </body>
 </html>
